<resources>
    <string name="app_name">Truck\'Eat</string>
    <string name="title_activity_maps">Map</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="eater_connect">Je suis Eater</string>
    <string name="connection_succeed">Connexion réussie !</string>
    <string name="error_authentication_canceled">Erreur : Authentification annulée</string>
    <string name="error_no_internet">Erreur : Aucun accès internet</string>
    <string name="error_unknown_error">Erreur : Erreur inconnue</string>
    <string name="PopButton">Voir le menu</string>
    <string name="trucker_connect">Je suis Trucker</string>
    <string name="desc">Description</string>
    <string name="ask_permission">Permission demandée</string>
    <string name="permission_text">Cette application a besoin de votre localisation pour fonctionner correctement. Merci de donner votre autorisation</string>
    <string name="authorize">Autoriser</string>
    <string name="map_connect">Afficher la carte</string>
    <string name="mail">Adresse e-mail</string>
    <string name="password">Mot de passe</string>
    <string name="confirm">Confirmer</string>
    <string name="connectAdd">Ajouter un Truck</string>
    <string name="connectDelete">Supprimer Truck</string>
    <string name="field_adresse">Adresse</string>
    <string name="field_nom">Nom de l\'enseigne</string>
    <string name="ajouterCarte">Ajouter la carte</string>
    <string name="mot_equipe">Mot de l\'équipe</string>
</resources>