<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grad_start"
    tools:context=".IdActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_login"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_login"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_fourchettecouteau" />

        <ImageView
            android:id="@+id/imageRoue"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_roue" />

    </RelativeLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_btn_tertiary"
        android:onClick="onActivityResult"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textColor="@color/text_login"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>